# Algorithms-and-Data-Structures

./: .gitignore  CMakeLists.txt
Sockets/: Server  Server.c
algorithms/: Untitled-1.cpp  functions.cpp  log.cpp  performances.csv  problem_approaches.txt  quadratic_vs_linear.cpp
algorithms/DFA/: atoi.py  nfa.py  pda.py  regex.py  valid_number.py
algorithms/Divide and conquer/: build_skiline.py  kth_smallest.py
algorithms/Dynamic Programming/: Knuth-Morris-Pratt_algorithm.cpp  TSP.py  best_time.py  check_record.py  cherry_picking.py  dungeon_game.py  freedom_trail.py  n_jobs.py  (+22 more)
async/: Makefile  clients.py  event_loop.c  event_loop.h  server  server.c
concurrency/: helloWord.cpp
cpp_basics/: array.cpp  assignment_vs_initialization.cpp  bitwise_operators.cpp  casting.cpp  constants.cpp  control_flow.cpp  decorator.cpp  dynamic_memory.cpp  enumeration.cpp  functions.cpp  global_variables.cpp  hash.cpp  move.cpp  namespace.cpp  numbers.cpp  operator.cpp  operator_overloading.cpp  pointers.cpp  program.cpp  quine.cpp  rand.cpp  references.cpp  reinterpret_cas.cpp  simple.cpp  stl_library.cpp  string.cpp  struct.cpp  typedef.cpp
files/: file.csv  file.txt  files.cpp  read_csv.cpp  read_file.cpp
quant finance/: Matrix.cpp  Matrix.h  PayOff.cpp  PayOff.h  VanillaOption.cpp  VanillaOption.h  template.cpp
recursion/: binary_recursion.cpp  directories.cpp  english_ruler.cpp  linear_recursion.cpp  multiple_recursion.cpp  permutations.cpp  recursion.cpp
serialization/: send_data_to_arduino.cpp  serializable.h  serialize.cpp  serialize_output  serialize_output.txt
(+203 files in other folders)
